--- a/css/styles.css
+++ b/css/styles.css
@@ -1,39 +1,49 @@
+/* FONTS */
+
+
 /* GOOGLE FONTS */
 
-@import url('https://fonts.googleapis.com/css?family=Ubuntu');
+@import url('https://fonts.googleapis.com/css?family=Alegreya Sans SC');
+
+/* NAME FONT */
+
+@font-face {
+    font-family: bladerunner;
+    src: url(/css/BLADRMF_.TTF);
+    font-weight: bold;
+}
+
+div .name {
+    font-family: bladerunner;
+    font-size: 60px;
+    overflow-x: hidden;
+    color: black;
+    text-shadow: 3px 3px 3px orange;
+}
+
 
 /*IMAGE */
 
-img {
-    height: 40%;
-    width: 60%;
+img{
+    height: 50%;
+    width: 50%;
     display: block;
     margin-left: auto;
     margin-right: auto;
     border: solid orange 0.5px;
 }
 
-.tint {
-    -webkit-filter: sepia(1) hue-rotate(200deg);
-    filter: sepia(1) hue-rotate(200deg);
-}
 
 
 /* BACKGROUND DESIGN */
-
-
-/*
- .gradient {
-        background-image: linear-gradient( to bottom left, black, orange, white);
- }
- */
 
 body {
     color: black;
     background-image: url('../../images/backdrop.png');
     background-repeat: no-repeat;
+    background-size: 100% 100%;
     background-attachment: fixed;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Alegreya Sans SC', sans-serif;
 }
 
 h2,
@@ -43,7 +53,7 @@ h4,
 h5,
 h6 {
     color: white;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Alegreya Sans SC', sans-serif;
 }
 
 footer {
@@ -63,7 +73,7 @@ ul {
 
 li a {
     display: block;
-    color: white;
+    color: black;
     padding: 8px 16px;
     text-decoration: none;
 }
@@ -71,7 +81,7 @@ li a {
 li a:hover {
     background-color: black;
     color: orange;
-    margin: 5px 5px 5px 5px;
+    margin: 9px 9px 9px 9px;
 }
 
 
@@ -85,13 +95,13 @@ li a:hover {
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #111;
-    background-image: url('../../images/twitter.png');
+    background-color: black;
     background-size: 100% 100%;
+    opacity: 0.8;
     background-repeat: no-repeat;
     overflow-x: hidden;
     transition: 0.5s;
-    padding-top: 60px;
+    padding-top: 10px;
 }
 
 .sidenav a {
@@ -105,7 +115,7 @@ li a:hover {
 
 .sidenav a:hover,
 .offcanvas a:focus {
-    color: #f1f1f1;
+    color: lightgreen;
 }
 
 .sidenav .closebtn {
@@ -118,10 +128,10 @@ li a:hover {
 
 @media screen and (max-height: 450px) {
     .sidenav {
-        padding-top: 15px;
+        padding-top: 20px;
     }
     .sidenav a {
-        font-size: 18px;
+        font-size: 30px;
     }
 }
 
@@ -135,7 +145,6 @@ li a:hover {
 
 button.accordion {
     background-color: #eee;
-    border-radius: 25px;
     color: black;
     cursor: pointer;
     padding: 12px;
@@ -149,15 +158,14 @@ button.accordion {
 
 section {
     border: solid orange 0.5px;
-    border-radius: 25px;
     max-width: auto;
-    max-height: 300px;
+    max-height: 400px;
     margin: 0.5em;
 }
 
 button.accordion.active,
 button.accordion:hover {
-    background-color: #ddd;
+    background-color: black;
 }
 
 button.accordion:after {
@@ -191,7 +199,7 @@ div.content.show {
 
 .card {
     /* Add shadows to create the "card" effect */
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
     transition: 0.3s;
     text-align: center;
     height: 40%;
@@ -206,7 +214,7 @@ div.content.show {
 /* On mouse-over, add a deeper shadow */
 
 .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
 
 
